<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_identity"
        android:icon="@drawable/ic_person"
        android:title="@string/title_activity_identity" />

    <item
        android:id="@+id/navigation_trickle_pay"
        android:icon="@drawable/ic_faucet_drip"
        android:title="@string/title_activity_trickle_pay" />

    <item
        android:id="@+id/navigation_assets"
        android:icon="@drawable/ic_invoice"
        android:title="@string/title_activity_assets" />
    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping"
        android:title="@string/title_activity_shopping" />
<!--
    <item
        android:id="@+id/navigation_invoices"
        android:icon="@drawable/ic_invoice"
...
