...
    <string name="exchangeRate" formatted="false">(exchange rate: 1 %fiat is worth %amt %crypto)</string>
    <!-- user is attempting to send more cryptocurrency than the wallet contains.  The payment cannot happen -->
    <string name="moreThanAvailable">"(more than available)"</string>
    <!-- This is a warning or informational message.  It says that the user is sending recently received coins, which is perfectly OK but slightly increases the chance of payment failure -->
    <string name="moreThanConfirmedAvailable">"(more than confirmed)"</string>
    <string name="actuallySendingT" formatted="false">actually sending %qty %crypto</string>
    <string name="copiedToClipboard">...copied to clipboard...</string>
    <string name="cannotCopyToClipboard">Cannot copy to clipboard</string>
    <string name="tooLargeForClipboard">Too much data for clipboard</string>
    <string name="scanFailed">scan failed</string>
    <string name="scanSuccess">scan succeeded</string>
    <string name="sendSuccess">send successful</string>
    <string name="sendQuantityHint">send quantity</string>
...
    <string name="Blockchain">Blockchain</string>
    <string name="AccountRecoveryPhrase">Recovery Phrase</string>
    <string name="LeaveEmptyNewWallet">Leave empty to create a new account</string>
    <string name="PinSuggestions"><font size="15">This secret number is needed to access the account</font></string>
    <string name="createAccount">Create Account</string>
    <string name="invalidRecoveryPhrase">bad recovery phrase</string>
    <string name="invalidAccountName">invalid name</string>
    <string name="PassPhrase">Passphrase (optional)</string>
    <string name="Bip44ActivityNotice">Found account activity</string>
    <string name="NoBip44ActivityNotice">Warning, No transactions found!</string>
    <string name="Bip44BtcActivityNotice">Found nonstandard or pre-fork wallet activity</string>
    <string name="NoBip44BtcActivityNotice">No pre-fork transactions found</string>
    <string name="FirstUseDateHeightInfo" formatted="false">starting at %date (block %height)</string>
...
    <string name="walletDisconnectedFromBlockchain">wallet disconnected</string>

    <string name="badTransaction">bad transaction</string>
    <string name="badAddress">invalid address</string>
    <string name="badAmount">invalid amount</string>
    <!-- No accounts have been created yet -->
    <string name="NoAccounts">No accessible accounts</string>
    <!-- The crypto currency code (e.g NEX, BTC, BCH, etc) is not understood or handled by this wallet.  This message will be very hard to actually see because the UI
    protects against entering unknown crypto codes in other ways (by using spinners for example).  However if somehow an unknown code is entered, this is the error displayed.
     -->
    <string name="badCryptoCode">no unlocked account exists for this currency or blockchain</string>
    <string name="badCryptoCodeDetails" formatted="false">Unknown or unavailable currency: %currency</string>
    <!-- The fiat currency code (e.g USD, EUR, JPY etc) is not understood or handled by this wallet.  This message will be very hard to actually see because the UI
...
    <string name="title_activity_identity_op">Identity</string>
    <string name="title_activity_domain_identity_settings">Domain Identity Settings</string>
    <string name="title_activity_tx_history" formatted="false">Account History: %account</string>
    <string name="title_activity_account_details" formatted="false">Account Details: %account</string>

    <!-- Not part of the UI -->
    <string name="preferenceFileName" translatable="false">bitcoinunlimited.wally.prefs</string>

    <!-- Domain Identity Settings -->
    <string name="useUniqueIdentity">Use a unique identity</string>

    <string name="title_activity_identity_settings">Identity Settings</string>
    <string name="title_activity_welcome">Welcome</string>
...
