package info.bitcoinunlimited.www.wally
/*
import org.nexa.libnexakotlin.*
import com.ionspin.kotlin.bignum.decimal.*
import org.nexa.nexarpc.NexaRpcFactory

import android.app.Activity
import android.app.ActivityManager
import android.content.*
import android.content.Context.ACTIVITY_SERVICE
import android.content.Context.CLIPBOARD_SERVICE
import android.content.res.Configuration
import android.net.Uri
import android.view.View
import android.widget.Switch
import android.widget.TextView
import androidx.lifecycle.Lifecycle
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.*
import androidx.test.espresso.Espresso.onData
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
// import androidx.test.espresso.screenshot.captureToBitmap
import androidx.test.ext.junit.runners.AndroidJUnit4
import info.bitcoinunlimited.www.wally.*
import io.ktor.client.network.sockets.*
import kotlinx.serialization.json.JsonArray
import kotlinx.serialization.json.JsonObject
import org.hamcrest.CoreMatchers.instanceOf
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.*
import org.junit.Test
import org.junit.runner.RunWith
import java.lang.Thread.sleep
import java.net.URLEncoder

import info.bitcoinunlimited.www.wally.R.id as GuiId
import org.hamcrest.Matchers
import org.nexa.nexarpc.NexaRpc
import java.util.*

val LogIt = GetLog("GuiTest")

class TestTimeoutException(what: String): Exception(what)

val REGTEST_RPC_PORT=18332
val REGTEST_P2P_PORT=18444
val FULL_NODE_IP = "192.168.1.5" // SimulationHostIP
//val REGTEST_P2P_PORT=7327
//val REGTEST_RPC_PORT=7328


fun ViewInteraction.isGone() = getViewAssertion(Visibility.GONE)
fun ViewInteraction.isVisible() = getViewAssertion(Visibility.VISIBLE)
fun ViewInteraction.isInvisible() = getViewAssertion(Visibility.INVISIBLE)

private fun getViewAssertion(visibility: ViewMatchers.Visibility): ViewAssertion? {
    return ViewAssertions.matches(ViewMatchers.withEffectiveVisibility(visibility))
}

/*  helper test function not currently used */
/*
fun generateAndLogSomeTricklePayRequests(application: WallyApp)
{
    val act = application.primaryAccount
    val wallet = act.wallet
    val identityDest: PayDestination = wallet.destinationFor(Bip44Wallet.COMMON_IDENTITY_SEED)

    var uri = ConstructTricklePayRequest("testapp", "testtopic", "reg", identityDest, "BCH", 1000000UL, null, null, 100000000UL)
    LogIt.info(uri.toString())
    if (VerifyTdppSignature(uri) == true)
    {
        LogIt.info("Sig Verified")
    }
    else
    {
        VerifyTdppSignature(uri)
    }
    var uri2 = Uri.parse(uri.toString())
    if (VerifyTdppSignature(uri2) == true)
    {
        LogIt.info("Sig Verified")
    }
    else
    {
        VerifyTdppSignature(uri)
    }
}
 */

// from http://www.douevencode.com/articles/2019-02/espresso-wait-for-activity-visible/
inline fun <reified T : Activity> WallyApp.isVisible() : Boolean {
    val am = applicationContext.getSystemService(ACTIVITY_SERVICE) as ActivityManager
    val visibleActivityName = am.appTasks[0].taskInfo.baseActivity!!.className
    //println(visibleActivityName)
    //println(T::class.simpleName)
    //return visibleActivityName.split(".").last() == T::class.simpleName
    return visibleActivityName == T::class.qualifiedName
}

val TIMEOUT = 10000L
val CONDITION_CHECK_INTERVAL = 200L

inline fun <reified T : Activity> WallyApp.waitUntilActivityVisible() {
    val startTime = System.currentTimeMillis()
    while (!isVisible<T>()) {
        Thread.sleep(CONDITION_CHECK_INTERVAL)
        if (System.currentTimeMillis() - startTime >= TIMEOUT) {
            throw AssertionError("Activity ${T::class.simpleName} not visible after $TIMEOUT milliseconds")
        }
    }
}

fun getText(viewId: Int): String?
{
    var ret: String? = null
    onView(withId(viewId)).check { v, exc ->
        ret = (v as TextView).text.toString()
    }
    return ret
}

fun clickId(id: Int): ViewAction
{
    return object : ViewAction
    {
        override fun getConstraints(): Matcher<View>
        {
            return object
                : Matcher<View>
            {
                override fun describeTo(description: Description?) {}
                override fun matches(actual: Any?): Boolean = true
                override fun describeMismatch(actual: Any?, mismatchDescription: Description?) {}
                override fun _dont_implement_Matcher___instead_extend_BaseMatcher_() {}
            }
        }

        override fun getDescription(): String
        {
            return "Click on a child view with specified id."
        }

        override fun perform(uiController: UiController?, view: View)
        {
            val v = view.findViewById<View>(id)
            v.performClick()
        }
    }
}

fun setUpSettTests() : Pair<SharedPreferences?,ActivityScenario<Settings>>
{
    // Start up a particular Activity.  In this case "Settings"
    val activityScenario: ActivityScenario<Settings> = ActivityScenario.launch(Settings::class.java)
    activityScenario.moveToState(Lifecycle.State.RESUMED)

    // Grab the instance of our app
    var app: WallyApp? = null
    activityScenario.onActivity { app = (it.application as WallyApp) }
    kotlin.assert(app != null)

    // Get access to what is happening in the back end
    // Everything needs to be inside onActivity, to schedule it within the activity context
    var preferenceDB: SharedPreferences? = null
    activityScenario.onActivity {
        preferenceDB = it.getSharedPreferences(it.getString(R.string.preferenceFileName), Context.MODE_PRIVATE)
    }
    return Pair(preferenceDB,activityScenario)
}

inline fun<reified T : Activity> setUp(vararg names:String) : Triple<ChainSelector,ActivityScenario<T>,WallyApp?>
{

    val cs = ChainSelector.NEXAREGTEST
    val activityScenario: ActivityScenario<T> = ActivityScenario.launch(T::class.java)
    activityScenario.moveToState(Lifecycle.State.RESUMED);
    var app: WallyApp? = null
    activityScenario.onActivity { app = (it.application as WallyApp) }
    kotlin.assert(app != null)

    //val ctxt = PlatformContext(app!!.applicationContext)
    val wdb = openWalletDB(dbPrefix + "bip44walletdb")!!
    for (name in names) {
        deleteWallet(wdb, name, cs)
    }
    return Triple(cs,activityScenario,app!!)
}


fun giveWalletCoins() : NexaRpc
{
    val rpcConnection = "http://" + SimulationHostIP + ":" + REGTEST_RPC_PORT
    LogIt.info("Connecting to: " + rpcConnection)
    var rpc = NexaRpcFactory.create(rpcConnection)
    var peerInfo = try {
        rpc.getpeerinfo()
    } catch (e: ConnectTimeoutException) {
        throw ConnectTimeoutException("ATTENTION! You haven't run the nexa-qt.exe. Please go do that!")
    }
    check(peerInfo.size >= 0 && peerInfo.size <= 10)
    return rpc
}

@RunWith(AndroidJUnit4::class)
class GuiTest
{
    init {
        runningTheTests = true
        dbPrefix = "guitest_"
    }

    fun openRpc(): NexaRpc
    {
        val rpcConnection = "http://" + FULL_NODE_IP + ":" + REGTEST_RPC_PORT
        LogIt.info("Connecting to: " + rpcConnection)
        var rpc = NexaRpcFactory.create(rpcConnection)
        var bc = rpc.getblockcount()  // just try anything
        check(bc >= 101)  // well, I'm pretty much certainly going to need some coins so the person setting this up ought to have moved us forward
        return rpc
    }

    fun ensureFullNodeBalance(rpc:NexaRpc, amt: Int)
    {
        var rpcBalance = rpc.getbalance()
        LogIt.info("balance is: " + rpcBalance.toPlainString())
        while (rpcBalance < BigDecimal.fromInt(amt))
        {
            rpc.generate(1)
            rpcBalance = rpc.getbalance()
        }
    }

    fun cleanupWallets()
    {
        val cs = ChainSelector.NEXAREGTEST
        wallyApp!!.accounts.clear()
        walletDb = openKvpDB(dbPrefix + "bip44walletdb")
        val wdb = walletDb!!
        deleteWallet(wdb, "rNEX1", cs)
        deleteWallet(wdb, "rNEX2", cs)
        deleteWallet(wdb, "rNEX3", cs)
        deleteWallet(wdb, "rNEX4", cs)
    }

    fun setLocale(locale: Locale, app: WallyApp)
    {
        Locale.setDefault(locale)
        val res = app.getBaseContext().getResources()
        val config: Configuration = res.getConfiguration()
        config.locale = locale
        res.updateConfiguration(config, res.getDisplayMetrics())
    }

    fun clipboardText(): String
    {
        val clipboard = wallyApp!!.getSystemService(CLIPBOARD_SERVICE) as ClipboardManager
        val clip: ClipData = clipboard.getPrimaryClip() ?: return ""
        if (clip.itemCount == 0) return ""
        val item = clip.getItemAt(0)
        val text = item.text.toString().trim()
        return text
    }

    fun clickSpinnerItem(entity: Int, item: String)
    {
        while(true) try
        {
            waitForView  { onView(withId(entity)).perform(click()) }
            onData(allOf(instanceOf(String::class.java), equalTo(item)))
              // .inAdapterView(withId(entity))  // redundant
              .perform(click())
            break
        }
        catch (e: androidx.test.espresso.PerformException)
        {
            sleep(500)
        }
    }

    fun clickSpinnerItem(listRes: Int, position: Int)
    {
        onData(anything())
            .inAdapterView(withId(listRes))
            .atPosition(position).perform(click())
    }

    fun waitUntilLayoutHas(entity: Int, timeout: Int=10000)
    {
        var count = timeout
        while(true) try
        {
            onView(withId(entity)) //.perform(clearText())
            break
        }
        catch (e: NoMatchingViewException)
        {
            Thread.sleep(100)
            count-=100
            if (count < 0 ) throw TestTimeoutException("Timout waiting for view to contain ${entity}")
        }
    }

    fun waitFor(timeout: Int = 10000, checkIt: ()->Boolean)
    {
        var count = timeout
        while(!checkIt())
        {
            Thread.sleep(100)
            count-=100
            if (count < 0 ) throw TestTimeoutException("Timout waiting for predicate")
        }
    }

    fun<T> waitForView(time: Int = 10000, thunk: ()->T) : T
    {
        var countup = 0
        while(true) try
        {
            return thunk()
        }
        catch (e: NoMatchingViewException)
        {
            if (countup >= time)
            {
                LogIt.info("After delay of $time, there is still no matching view")
                throw e
            }
            sleep(500)
            countup += 500
        }
        catch (e: PerformException)
        {
            sleep(500)
            countup += 500
        }
        catch (e: RuntimeException)  // Error while connecting UiAutomation
        {
            sleep(1000)
            countup += 1000
        }

    }

    fun<T:Activity> waitForActivity(timeout: Int = 10000, activityScenario: ActivityScenario<T>, checkIt: (act: T)->Boolean)
    {

        waitFor(timeout)
        {
            var result = false
            activityScenario.onActivity { result = checkIt(it) }
            result
        }
    }

    fun retryUntilLayoutCan(timeout: Int=10000, doit:()->Unit)
    {
        var count = timeout
        while(true) try
        {
            doit()
            break
        }
        catch (e: NoMatchingViewException)
        {
            Thread.sleep(100)
            count-=100
            if (count < 0 ) throw TestTimeoutException("Timout waiting for layout")
        }
        catch (e: PerformException)
        {
            Thread.sleep(100)
            count-=100
            if (count < 0 ) throw TestTimeoutException("Timout waiting for Expresso perform")
        }
    }

    /** This expects that you are in the main activity */
    fun createNewAccount(name: String, app: WallyApp, chainSelector: ChainSelector, pin:String? = null, hidden:Boolean = false, recoveryPhrase: String? = null, doubleOk:Boolean = false)
    {
        if (!chainSelector.isMainNet) devMode = true  // Switch into dev mode if using a devmode chain

        // Switch to a different activity
        while(true) try {
            onView(withId(GuiId.GuiNewAccount)).perform(click())
            break
        }
        catch (e: NoMatchingViewException)
        {
            sleep(500)
        }
        catch (e: PerformException)
        {
            sleep(500)
        }
        catch (e: RuntimeException)  // Error while connecting UiAutomation
        {
            sleep(500)
        }

        //onView(withId(GuiId.GuiCreateAccountButton)).perform(click())
        //val act = currentActivity!!
        // TODO test invalid account names.  But right now this is going to work because its autofilled in
        // check(act.lastErrorId == R.string.invalidAccountName)
        //Note: I've changed this to input a preferred name. Will have to implement that check for invalid names eventually.
        //onView(withId(GuiId.GuiAccountNameEntry)).perform(clearText(),typeText(name), pressImeActionButton(), pressBack())
        waitForView { clickSpinnerItem(GuiId.GuiBlockchainSelector, ChainSelectorToSupportedBlockchains[chainSelector]!!) }
        waitForView { onView(withId(GuiId.GuiAccountNameEntry)).perform(clearText(),typeText(name), pressImeActionButton(), pressBack()) }
        if (pin != null) waitForView { onView(withId(GuiId.GuiPINEntry)).perform(clearText(), typeText(pin), pressImeActionButton(), pressBack()) }
        if (hidden) waitForView { onView(withId(GuiId.PinHidesAccount)).perform(click()) }
        if (recoveryPhrase != null) waitForView { onView(withId(GuiId.GuiAccountRecoveryPhraseEntry)).perform(clearText(),typeText(recoveryPhrase), pressImeActionButton(), pressBack()) }

        sleep(1000)
        waitForView { onView(withId(GuiId.GuiCreateAccountButton)).perform(click()) }
        if (doubleOk)
        {
            sleep(1000)
            waitForView { onView(withId(GuiId.GuiCreateAccountButton)).perform(click()) }
        }
        app!!.waitUntilActivityVisible<MainActivity>()
    }

    @Test fun testRpc()
    {
        LogIt.info("This test requires a full node running on regtest")

        // Set up RPC connection
        val rpcConnection = "http://" + FULL_NODE_IP + ":" + REGTEST_RPC_PORT

        val nexaRpc = NexaRpcFactory.create(rpcConnection)

        // Try the hard way (manual parsing returned parameter)
        val retje = nexaRpc.callje("listunspent")
        val result = (retje as JsonObject)["result"] as JsonArray
        check(result.size > 0)  // This could fail if you haven't created at least 101 blocks

        // Try the easy way
        val ret = nexaRpc.listunspent()
        check(ret.size > 0)
    }

    @Test fun testBottomNavigation()
    {
        val activityScenario: ActivityScenario<MainActivity> = ActivityScenario.launch(MainActivity::class.java)
        activityScenario.moveToState(Lifecycle.State.RESUMED)
        var app: WallyApp? = null
        activityScenario.onActivity { app = (it.application as WallyApp) }
        assert(app != null)

        walletDb = openKvpDB(dbPrefix + "TESTbip44walletdb")

        onView(withId(R.id.navigation_home)).perform(click())

        /*
        onView(allOf(withId(R.id.navigation_identity), isDisplayed())).let {
            it.perform( object : ViewAction
            {
                override fun getDescription(): String
                {
                    return ""
                }
                override fun getConstraints(): Matcher<View>
                {
                    return hasFocus()
                }
                override fun perform(uiController: UiController?, view: View?)
                {
                    if (view != null)
                    {
                        click()
                    }
                }
            })
        }
        */

        //onView(withId(R.id.navigation_trickle_pay)).perform(click())
        //onView(withId(R.id.navigation_assets)).perform(click())
        onView(withId(R.id.navigation_shopping)).perform(click())
        onView(withId(R.id.navigation_home)).perform(click())
        // onView(withId(R.id.navigation_identity)).perform(click())
        pressBack()
        onView(withId(R.id.navigation_trickle_pay)).perform(click())
        pressBack()
        //onView(withId(R.id.navigation_assets)).perform(click())
        //pressBack()
        onView(withId(R.id.navigation_shopping)).perform(click())
        pressBack()

        onView(withId(R.id.navigation_shopping)).perform(click())
        pressBack()
        onView(withId(R.id.navigation_shopping)).perform(click())
        pressBack()
        onView(withId(R.id.navigation_trickle_pay)).perform(click())
        pressBack()
        onView(withId(R.id.navigation_trickle_pay)).perform(click())
        pressBack()
        onView(withId(R.id.navigation_home)).perform(click())
        sleep(1000)
        activityScenario.close()
        LogIt.info("Completed!")
    }

    @Test fun testTricklePayRegistration()
    {
        val activityScenarioM: ActivityScenario<MainActivity> = ActivityScenario.launch(MainActivity::class.java)
        activityScenarioM.moveToState(Lifecycle.State.RESUMED)
        val app = wallyApp!!
        walletDb = openKvpDB(dbPrefix + "TESTbip44walletdb")
        val wdb = walletDb!!

        val tw = Bip44Wallet(wdb,"testframework", ChainSelector.NEXA, "quantum curve elephant soccer faculty cheese merge medal vault damage sniff purpose")
        val dest = tw.destinationFor("")
        // TODO Uri.encode vs URLEncoder
        var uriStr:String = "tdpp://www.yoursite.com/reg?addr=" + URLEncoder.encode(dest.address!!.toString(), "UTF-8") + "&descday=" + URLEncoder.encode("desc2 space test", "UTF-8") + "&descper=desc1&descweek=week&maxday=10000&maxper=1000&maxweek=100000&topic=thisisatest&uoa=NEX"
        val tosign = uriStr.toByteArray()
        println("signing text: ${uriStr}")
        println("signing hex: ${tosign.toHex()}")
        val sig = libnexa.signMessage(uriStr.toByteArray(), dest.secret!!.getSecret())
        check(sig != null)
        val uriSig64=Uri.encode(Codec.encode64(sig))
        uriStr = uriStr + "&sig=$uriSig64"

        println("trickle pay example: " + uriStr)

        val tent = Intent(Intent.ACTION_VIEW, Uri.parse(uriStr))
        val activityScenario: ActivityScenario<TricklePayActivity> = ActivityScenario.launch(tent)
        activityScenario.moveToState(Lifecycle.State.RESUMED)

        try
        {
            app.primaryAccount
        }
        catch (e:PrimaryWalletInvalidException)
        {
            // Wallet has no accounts
            check(alerts[alerts.size - 1].msg == i18n(R.string.NoAccounts))

            // add an account and try again
            app.newAccount("NEX1", ACCOUNT_FLAG_NONE, "", ChainSelector.NEXA)
            val act = app.primaryAccount
            activityScenario.recreate()
        }


        // push all the buttons
        activityScenario.onActivity {
            val fm = it.getSupportFragmentManager()
            val fragG = fm.findFragmentById(R.id.GuiTricklePayReg)
            val frag = fragG as TricklePayRegFragment
            val s: String = frag.ui.GuiTricklePayEntity.text.toString()
            check(s == "www.yoursite.com")
            check(frag.ui.GuiTricklePayTopic.text.toString() == "thisisatest")
            check(frag.ui.GuiAutospendLimitDescription0.text.toString() == "desc1")
            check(frag.ui.GuiAutospendLimitDescription1.text.toString() == "desc2 space test")
            check(frag.ui.GuiAutospendLimitDescription2.text.toString() == "week")
        }

        onView(withId(GuiId.TpAssetInfoRequestHandlingButton)).perform(click())
        onView(withId(GuiId.TpAssetInfoRequestHandlingButton)).perform(click())
        onView(withId(GuiId.TpAssetInfoRequestHandlingButton)).perform(click())

        onView(withId(GuiId.GuiEnableAutopay)).perform(click())
        onView(withId(GuiId.GuiEnableAutopay)).perform(click())

        onView(withId(GuiId.GuiAutospendLimitEntry0)).perform(clearText(),typeText("123"), pressImeActionButton())
        onView(withId(GuiId.GuiAutospendLimitEntry1)).perform(clearText(),typeText("234"), pressImeActionButton())
        onView(withId(GuiId.GuiAutospendLimitEntry2)).perform(clearText(),typeText("345"), pressImeActionButton())
        onView(withId(GuiId.GuiAutospendLimitEntry3)).perform(clearText(),typeText("456"), pressImeActionButton())

        onView(withId(GuiId.GuiTpRegisterRequestAccept)).perform(click())  // this will close the activity

        // Get back into it
        val asc: ActivityScenario<TricklePayActivity> = ActivityScenario.launch(TricklePayActivity::class.java)
        asc.moveToState(Lifecycle.State.RESUMED)

        // Check that new registration was accepted
        asc.onActivity {
            check(it.tpDomains.size > 0)
        }

        // OK get rid of what we created
        onView(withId(GuiId.GuiTpDeleteAll)).perform(click())
        asc.close()
        activityScenario.close()
        activityScenarioM.close()
        println("worked!")
    }

    @Test fun testIdentityActivity()
    {
        cleanupWallets()
        sleep(1000)
        val activityScenario: ActivityScenario<IdentityActivity> = ActivityScenario.launch(IdentityActivity::class.java)

        // There will be no accounts, so check proper error
        activityScenario.onActivity {
            println("it.ui.commonIdentityAddress.text " + it.ui.commonIdentityAddress.text )
            check(it.ui.commonIdentityAddress.text == i18n(R.string.NoAccounts))
        }

        val app = {
            var a: WallyApp? = null
            activityScenario.onActivity { a = (it.application as WallyApp) }
            assert(a != null)
            a!!
        }()

        walletDb = openKvpDB(dbPrefix + "TESTbip44walletdb")
        val wdb = walletDb!!

        val act = try
        {
            app.primaryAccount
        }
        catch (e:PrimaryWalletInvalidException)
        {
            app.newAccount("NEX1", ACCOUNT_FLAG_NONE, "", ChainSelector.NEXA)
        }


        // Setup is complete so now show the activity
        activityScenario.recreate()
        activityScenario.moveToState(Lifecycle.State.RESUMED)

        var addr:String = ""
        activityScenario.onActivity {
            val s:String = it.ui.commonIdentityAddress.text.toString()
            check(s.startsWith("nexa:"))
            addr = s
        }

        check(addr.startsWith("nexa:"))

        onView(withId(GuiId.commonIdentityAddress)).perform(click())
        activityScenario.onActivity {
            val s:String = it.ui.commonIdentityAddress.text.toString()
            check(s == i18n(R.string.copiedToClipboard))
        }
        val cp = clipboardText()
        check(cp == addr)
    }

    //The following are settings tests
    @Test fun testSettingsDevMode()
    {
        // Start up a particular Activity.  In this case "Settings"
        val activityScenario: ActivityScenario<Settings> = ActivityScenario.launch(Settings::class.java)
        activityScenario.moveToState(Lifecycle.State.RESUMED)

        // Grab the instance of our app
        var app: WallyApp? = null
        activityScenario.onActivity { app = (it.application as WallyApp) }
        assert(app != null)

        // Get access to what is happening in the back end
        // Everything needs to be inside onActivity, to schedule it within the activity context
        var preferenceDB: SharedPreferences? = null
        activityScenario.onActivity {
            preferenceDB = getSharedPreferences(it.getString(R.string.preferenceFileName), Context.MODE_PRIVATE)
